--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,7 @@ hs_err_pid*
 replay_pid*
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
