--- a/pom.xml
+++ b/pom.xml
@@ -20,36 +20,34 @@
     </licenses>
 
     <properties>
-        <argLine>
-            -Dnet.bytebuddy.experimental=true
-        </argLine>
+        <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <maven.version>3.8.8</maven.version>
+        <maven.version>3.9.5</maven.version>
         <jdk.version>21</jdk.version>
         <java.release>21</java.release>
 
         <revision>1.0.0</revision>
 
         <jetbrains-annotations.version>24.0.1</jetbrains-annotations.version>
-        <log4j.version>2.20.0</log4j.version>
+        <log4j.version>2.21.1</log4j.version>
 
         <junit.version>5.10.0</junit.version>
         <assertj.version>3.24.2</assertj.version>
         <mockito.version>5.6.0</mockito.version>
         <bytebuddy.version>1.14.9</bytebuddy.version>
 
-        <maven-checkstyle-plugin.version>3.3.0</maven-checkstyle-plugin.version>
+        <maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>
 
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.2.1</maven-surefire-plugin.version>
         <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
-        <maven-site-plugin.version>4.0.0-M9</maven-site-plugin.version>
+        <maven-site-plugin.version>4.0.0-M11</maven-site-plugin.version>
 
-        <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
