--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <junit.version>5.10.0</junit.version>
         <assertj.version>3.24.2</assertj.version>
         <mockito.version>5.6.0</mockito.version>
+        <awaitility.version>4.2.0</awaitility.version>
         <bytebuddy.version>1.14.9</bytebuddy.version>
 
         <maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>
@@ -72,6 +73,14 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-junit-jupiter</artifactId>
                 <version>${mockito.version}</version>
+                <type>pom</type>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.awaitility</groupId>
+                <artifactId>awaitility</artifactId>
+                <version>>${awaitility.version}</version>
                 <type>pom</type>
                 <scope>test</scope>
             </dependency>
@@ -125,6 +134,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -260,6 +275,7 @@
                         <consoleOutput>true</consoleOutput>
                         <logViolationsToConsole>true</logViolationsToConsole>
                         <failsOnError>true</failsOnError>
+                        <excludes>**/edu/project3/analyzers/MostPopularBrowsersAnalyzer.java,**/edu/project3/analyzers/MostPopularOperatingSystemsAnalyzer.java</excludes>
                     </configuration>
                 </plugin>
             </plugins>
