--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,7 @@
                             <exclude>**/edu/hw1/Main.class</exclude>
                             <exclude>**/edu/project1/Main.class</exclude>
                             <exclude>**/edu/project2/Main.class</exclude>
+                            <exclude>**/edu/project4/Main.class</exclude>
                         </excludes>
                     </configuration>
                 </plugin>
